# buckshot-roulette-irl

./: .gitignore  README.md  TFT-display-style-guide.md  package.json  real-game-mechanics.md
.github/workflows/: android-nightly.yml
android-app/: README.md  local.properties  settings.gradle
android-app/app/: build.gradle
firmware/: CMakeLists.txt  Plan.md  partitions.csv  readme.md  sdkconfig  sdkconfig.defaults
firmware/certs/: server.crt  server.key
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
firmware/main/assets/: end_screen.c  soup_sprites.c  tft_sprites.c  tft_sprites.h
firmware/web/: app.css  app.js  index.html
images/source-files/: Explosion-1.ase  Explosion-2.ase  bullets.aseprite  humo.ase
models/: Handsaw keychain.3MF  inverter.stl  magnifying-glass.stl  phone.stl  remote.stl  syringe.stl
models/DIY/Blender-files/: beer.blend
models/DIY/Printable files/: Beer.stl  beer.stl  syringe.fbx
models/PRINTS-CORRECT-SIZE/: Handsaw keychain.stl  fire sticks.stl  hlaven.stl  inverter.stl  magnifying-glass.stl  phone.stl  pump-handle-part1.stl  pump-handle-part2.stl  pump.stl  remote.stl  soup.stl  syringe.stl
models/cigarrete-box/: Crush+Proof+Cigarette+Box.stl  Crush+Proof+Cigarette+Lid.stl  box_source.txt  cigarrete.stl
models/shotgun/: HOWTOPRINT_READTHIS.txt  hlaven.stl  pump-handle.step  pump.stl
models/shotgun/source-files/: non-mirrored-pump-handle.f3d  pump-handle.f3d  pump-handle.mtl  (+1 more)
web-emulator/: README.md  package-lock.json  package.json  vite.config.mjs
webtest/web/: app.css  app.js  changes.md  index.html
(+6 files in other folders)
