idf_component_register(
    SRCS
        "main.c"
        "assets/tft_sprites.c"
        "assets/soup_sprites.c"
        "assets/end_screen.c"
    INCLUDE_DIRS "."
    REQUIRES
        esp_driver_gpio
        esp_driver_spi
        esp_event
        esp_http_server
        esp_netif
        esp_timer
        esp_wifi
        lvgl
        nvs_flash
        qrcode
)
